# agentforge-platform

./: .env.example  .gitignore  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/agentforge_api/: __init__.py  main.py
apps/api/src/agentforge_api.egg-info/: PKG-INFO  SOURCES.txt
apps/api/src/agentforge_api/auth/: __init__.py  dependencies.py  jwt.py  models.py
apps/api/src/agentforge_api/core/: __init__.py  config.py  error_handlers.py  exceptions.py
apps/api/src/agentforge_api/models/: __init__.py  agent.py  edge.py  execution.py  job.py  node.py  validation.py  workflow.py
apps/api/src/agentforge_api/realtime/: __init__.py  emitter.py  events.py  hub.py  websocket.py
apps/api/src/agentforge_api/routes/: __init__.py  dto.py  executions.py  validation.py  workflows.py
apps/api/src/agentforge_api/services/: __init__.py  agent_runtime.py  cache.py  execution_service.py  orchestrator.py  queue.py  seed_data.py  workflow_service.py
apps/api/src/agentforge_api/validation/: __init__.py  graph.py  semantic.py  structural.py  topological.py  validator.py
apps/api/tests/: __init__.py  test_execution_flow.py
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/executions/: page.tsx
apps/web/src/app/workflows/: page.tsx
apps/web/src/components/auth/: auth-initializer.tsx
apps/web/src/components/canvas/: base-node.tsx  execution-logs-panel.tsx  index.ts  node-palette.tsx  toolbar.tsx  types.ts  utils.ts  workflow-canvas.tsx
apps/web/src/hooks/: index.ts  use-connection-validation.ts  use-execution-websocket.ts  use-executions.ts  use-workflows.ts
apps/web/src/lib/: permissions.ts
apps/web/src/lib/api/: client.ts  index.ts  (+4 more)
apps/web/src/stores/: canvas-store.ts  execution-store.ts  index.ts  session-store.ts  ui-store.ts  workflow-store.ts
apps/web/src/types/: agent.ts  api.ts  auth.ts  edge.ts  events.ts  execution.ts  index.ts  node.ts  validation.ts  workflow.ts
src/types/: agent.ts  execution.ts  index.ts  node.ts  workflow.ts
src/validation/: graph.ts
(+28 files in other folders)
